# k3sc

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go
cmd/: bench.go  cargo_lock.go  claim.go  deploy.go  deploy_test.go  disable.go  dispatch.go  kill.go  launch.go  logs.go  logs_test.go  next.go  operator.go  pause.go  release.go  reset.go  root.go  rotate_auth.go  sessions.go  take.go  take_test.go  timberbot.go  top.go  top_tail_test.go  top_test.go
docs/: ascii-tomato.txt
image/: Dockerfile  Dockerfile.endless  cargo-lock-linux.py  entrypoint.sh
image/claude-config/: CLAUDE.md
internal/claude/: active_block.go  active_block_test.go  sessions.go  sessions_test.go
internal/config/: config.go
internal/dispatch/: dispatch.go
internal/format/: format.go
internal/github/: client.go  client_test.go
internal/k8s/: client.go  client_test.go
internal/operator/: controller.go  controller_test.go  ledger.go  quota.go  quota_probe.go  quota_test.go  reviewlease.go  reviewlease_test.go  scanner.go  scheduler.go  scheduler_test.go  types.go
internal/tui/: logstream.go  logstream_test.go  model.go  model_test.go  sessions_model.go  sessions_model_test.go  timberbot_model.go
manifests/: crd.yaml  dispatcher-cronjob.yaml  job-template.yaml  namespace.yaml  operator-deployment.yaml  pvc-cargo-home.yaml  pvc-cargo-target.yaml  pvc-workspaces.yaml  rbac.yaml  secret.yaml  timberbot-job-template.yaml
scripts/: deploy.py  dispatcher.py
src/: deploy.rs  dispatch.rs  github.rs  k8s.rs  logs.rs  main.rs  top.rs  types.rs
tools/: ctop.py  logs.py
(+2 files in other folders)
