[package]
name = "k3s-claude"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
kube = { version = "1", features = ["client", "runtime"] }
k8s-openapi = { version = "0.25", features = ["v1_30"] }
octocrab = "0.44"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
serde_yaml = "0.9"
